# CTI-Aggregator

./: .env.example  .gitignore  CLAUDE.md  Makefile  README.md  alembic.ini  log.txt  pyproject.toml  roadmap.md
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx
infra/: docker-compose.yml
infra/nginx/: cti.conf  gen-dev-cert.sh
infra/ollama/: benchmark.md
infra/postgres/: init.sql
infra/redis/: redis.conf
modules/alerting/: __main__.py  worker.py
modules/api/: Dockerfile  auth.py  bootstrap.py  deps.py  main.py
modules/api/routers/: auth.py  metrics.py  objects.py  perimeters.py  settings.py  sources.py
modules/api/schemas/: auth.py  object.py  perimeter.py  source.py
modules/collector/: Dockerfile  __main__.py  base.py  dedup.py  publisher.py  registry.py  run_once.py  scheduler.py
modules/collector/connectors/: html.py  pdf_upload.py  pdf_url.py  rss.py
modules/deduplicator/: Dockerfile  __main__.py  embedding.py  exact.py  semantic.py  worker.py
modules/enricher/: Dockerfile  __main__.py  nvd.py  shodan.py  virustotal.py  worker.py
modules/llm_normalizer/: Dockerfile  __main__.py  client.py  prompt.py  worker.py
modules/preprocessor/: Dockerfile  __main__.py  chunker.py  extractor.py  language.py  worker.py
modules/store/: Dockerfile  __main__.py  alembic.ini  enrichment.py  perimeter.py  repository.py  worker.py
modules/store/alembic/: env.py
modules/store/alembic/versions/: 0001_ivfflat_index.py  0002_p1_indexes.py  0003_perimeter_filters_alert_severity.py  0004_settings_table.py
modules/validator/: Dockerfile  __main__.py  confidence.py  hallucination.py  stix_validator.py  worker.py
shared/: __init__.py  db.py  logging.py  metrics.py
shared/config/: settings.py
shared/models/: __init__.py  enums.py  messages.py  stix.py
shared/queue/: __init__.py  client.py
tests/: conftest.py
tests/golden_dataset/: README.md
tests/integration/: test_queue_redis.py
tests/unit/: test_api.py  test_collector_rss.py  test_deduplicator.py  test_llm_normalizer.py  test_models_messages.py  test_models_stix.py  test_pdf_upload_connector.py  test_preprocessor.py  test_queue.py  test_settings.py  test_store.py  test_validator.py
