[project]
name = "cti-aggregator"
version = "0.1.0"
description = "On-premise CTI aggregation platform — STIX 2.1 normalisation via local LLM"
requires-python = ">=3.12"

dependencies = [
    # Async / HTTP
    "httpx>=0.27.0",
    "anyio>=4.4.0",

    # Redis
    "redis>=5.0.0",

    # Database
    "sqlalchemy>=2.0.0",
    "asyncpg>=0.29.0",
    "alembic>=1.13.0",
    "pgvector>=0.3.0",

    # Pydantic
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",

    # Logging
    "structlog>=24.2.0",

    # Scheduling
    "apscheduler>=3.10.0",

    # CTI / STIX
    "stix2>=3.0.1",
    "stix2-validator>=3.1.0",
    "taxii2-client>=2.3.0",
    "pymisp>=2.4.195",

    # Text extraction
    "trafilatura>=1.12.0",
    "pymupdf>=1.24.0",
    "feedparser>=6.0.11",
    "pytesseract>=0.3.13",
    "langdetect>=1.0.9",

    # Chunking
    "langchain-text-splitters>=0.2.0",
    "tiktoken>=0.7.0",

    # Embeddings
    "sentence-transformers>=3.0.0",

    # Email
    "aiosmtplib>=3.0.0",

    # Auth
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",

    # API
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.5.0",
    "mypy>=1.10.0",
    "types-passlib",
    "types-python-jose",
    "pip-audit>=2.7.0",
    "safety>=3.2.0",
    "ragas>=0.1.0",
    "httpx",  # already in main, explicit for test client
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "UP",   # pyupgrade
    "SIM",  # flake8-simplify
    "TCH",  # flake8-type-checking
    "ANN",  # flake8-annotations
]
ignore = [
    "ANN101",  # Missing type annotation for `self`
    "ANN102",  # Missing type annotation for `cls`
    "ANN401",  # Dynamically typed expressions (Any)
    "B008",    # Do not perform function calls in default arguments (FastAPI Depends)
]

[tool.ruff.lint.isort]
known-first-party = ["shared", "modules"]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true
plugins = ["pydantic.mypy"]
exclude = ["alembic/", "frontend/"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "unit: fast tests with no I/O dependencies",
    "integration: tests requiring database and Redis",
    "slow: long-running tests (golden dataset evaluation)",
]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["modules", "shared"]
omit = ["*/tests/*", "*/alembic/*"]

[tool.hatch.build.targets.wheel]
packages = ["modules", "shared"]
